--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Lavka</string>
-    <string name="title_new_orders">Новые заказы</string>
+    <string name="title_new_orders">Новые вкусняшки</string>
     <string name="error_loading">Не удалось загрузить заказы</string>
     <string name="retry">Обновить</string>
     <string name="empty_new_orders">Новых заказов нет</string>
@@ -9,7 +9,7 @@
     <string name="delivery_icon">Иконка доставки</string>
     <string name="new_order">Новый заказ</string>
     <string name="just_now">сейчас</string>
-    <string name="accept_order">Принять заказ</string>
+    <string name="accept_order">Принять вкусняшку</string>
     <string name="order_time">~15 мин</string>
     <string name="order_distance">0.8 км</string>
     <string name="orders_available">3 заказа доступно</string>
